# kernel_devices_google_lynx

./: BUILD.bazel  Makefile.ext_modules.lynx  README  build.config.lynx  build_lynx.sh  device.bazelrc  update_symbol_list_lynx-aosp.sh  update_symbol_list_lynx-staging.sh  update_symbol_list_lynx.sh  vendor_boot_modules.lynx  vendor_kernel_boot_modules.lynx  vendor_ramdisk.modules.lynx
display/: BUILD.bazel  Kbuild  Makefile  panel-samsung-s6e3fc3-l10.c  panel-samsung-s6e3fc5.c
dts/: BUILD.bazel  Makefile  google-base  gs201-lynx-audio.dtsi  gs201-lynx-battery-data.dtsi  gs201-lynx-battery.dtsi  gs201-lynx-bluetooth.dtsi  gs201-lynx-camera.dtsi  gs201-lynx-charging.dtsi  gs201-lynx-common.dtsi  gs201-lynx-dev1_0.dts  gs201-lynx-display.dtsi  gs201-lynx-haptics.dtsi  gs201-lynx-pmic.dtsi  gs201-lynx-proto1_0.dts  gs201-lynx-proto1_1.dts  gs201-lynx-thermal.dtsi  gs201-lynx-touch-dev1_0.dtsi  gs201-lynx-touch.dtsi  gs201-lynx-usecases.dtsi  gs201-lynx-wcharger.dtsi
