# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
    name = "lynx.dt",
    srcs = glob([
        "Makefile",
        "Makefile",
        "**/*.dtsi",
        "**/*.dts",
        "google-base",
        "google-base/Makefile",
        "google-base/**/*.dts",
        "google-base/**/*.dtsi",
        "google-base/**/*.h",
    ]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    visibility = [
        "//private/devices/google/lynx:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
